[tool.poetry]
name = "update-graylog-cluster-id"
version = "1.0.0"
description = "Script for updating the Graylog Cluster ID. Useful after seting up a new cluster and the desire to re-use your current enterprise license."
authors = ["Michael Ehrenreich <michael.ehrenreich@me.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pymongo = "^4.10.1"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.1"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
